--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Dmitry Palchuk",
+	"description": "A project to learn npm basics.",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -10,6 +11,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
+		"url": "https://github.com/d-palchuk/boilerplate-npm"
 	}
 }
