--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Dmitry Palchuk",
 	"description": "A project to learn npm basics.",
+	"license": "MIT",
 	"keywords": [ "npm", "package.json", "freecodecamp" ],
 	"dependencies": {
 		"express": "^4.14.0"
