--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"keywords": [ "npm", "package.json", "freecodecamp" ],
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"@freecodecamp/example": "1.1.0"
 	},
 	"main": "server.js",
 	"scripts": {
